# OliNat-Programming-Language

./: ASTcompiler.c  ASTcompiler.h  Bytecompiler.c  Bytecompiler.h  CMakeLists.txt  Expr.c  Expr.h  Hashmap.c  Hashmap.h  Value.c  Value.h  chunk.c  chunk.h  common.c  common.h  debug.c  debug.h  hashmap_types.h  main.c  memory.c  memory.h  natives.c  natives.h  object.c  object.h  readme.md  scanner.c  scanner.h  typeChecker.c  typeChecker.h  vm.c  vm.h
testCases/: .ExpressionTest.txt.kate-swp  ExpressionTest.txt  forLoops.txt  whileLoops.txt
testCases/Classes/: .CallingMethodsWithAndWithoutThis.txt.kate-swp  .DeclarationsNoCallingYet.txt.kate-swp  CallingMethodsWithAndWithoutThis.txt  DeclarationsNoCallingYet.txt  classConstructors.txt  gettingAndSettingClassFields.txt
testCases/EarlyLanguageTests/: And-Or.txt  ExpressionTest.txt  ParserPanicMode.txt  StackSize.txt  StackSizeLARGE.txt  allPossibleTokens.txt  arrays.txt  globalVars.txt  ifStatements.txt  localVars.txt
testCases/Stdlib/: Strings.txt
testCases/weirdFunctionStuff/: complexForwardChain.txt  forward_declaration.txt  mutalRecursion.txt  mutal_forward.txt  recursionTests.txt
testCases/weirdFunctionStuff/closures-I HATE THESE SM/: basicClosure.txt  changingUpvaluesViaClosures.txt  seperateCalls.txt  sharingUpvaluesViaClosures.txt  superNestedCalls.txt
